// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Linkify can receive linkStyle 1`] = `
<DocumentFragment>
  .c1 {
  color: inherit;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 div:nth-child(n + 2) {
  margin-top: 5px;
}

<div
    class="re-linkify c0"
  >
    <div>
      Hello! 
      <a
        class="c1"
        href="https://google.com"
        rel="noopener noreferrer"
        style="color: magenta;"
        target="_blank"
      >
        https://google.com
      </a>
       is a cool site.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Linkify can render markdown 1`] = `
<DocumentFragment>
  .c1 {
  color: inherit;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 div:nth-child(n + 2) {
  margin-top: 5px;
}

<div
    class="re-linkify c0"
  >
    <div>
      <a
        class="c1"
        href="http://google.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        this is a link
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Linkify converts links to anchor tags 1`] = `
<DocumentFragment>
  .c1 {
  color: inherit;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 div:nth-child(n + 2) {
  margin-top: 5px;
}

<div
    class="re-linkify c0"
  >
    <div>
      Hello! 
      <a
        class="c1"
        href="https://google.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        https://google.com
      </a>
       is a cool site.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Linkify escapes HTML entities 1`] = `
<DocumentFragment>
  .c0 div:nth-child(n + 2) {
  margin-top: 5px;
}

<div
    class="re-linkify c0"
  >
    <div>
      &lt;img src="fake.jpg" onError={() =&gt; {}} alt="hacker" /&gt;&lt;span&gt;heheh got hacked&lt;/span&gt;
    </div>
  </div>
</DocumentFragment>
`;
